enable_testing()
find_package(Boost COMPONENTS unit_test_framework REQUIRED)
set(LIBS ${LIBS} tictactoe_lib ${Boost_LIBRARIES})
include_directories(. ../../src)
add_executable(integration_main_test test_integration_main.cpp)
target_link_libraries(integration_main_test ${LIBS})
add_test(integration_main_test ${CMAKE_CURRENT_BINARY_DIR}/integration_main_test)
set_property(TARGET integration_main_test PROPERTY CXX_STANDARD 11)
